[feat] add css floder

--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "deploy": "vite build && bash ./deploy.sh"
   },
   "dependencies": {
+    "highlight.js": "^11.8.0",
     "pinia": "^2.0.23",
     "sass": "^1.55.0",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vue3-highlightjs": "^1.0.5"
   },
   "devDependencies": {
     "@types/node": "^18.11.2",
